--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@
     background: var(--white-color);
   }
   /* Header */
-  .logo {
+  .webstudio.header {
     font-family: "Raleway", sans-serif;
     font-weight: 800;
     font-size: 18px;
@@ -42,21 +42,27 @@
   .list {
     list-style-type: none;
   }
-  .nav-list {
+  /* Header Navigation */
+  .nav-list.link {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     color: var(--basic-color);
   }
-  .list .link:hover,
-  .list .link:focus {
+  .nav-list.link:hover,
+  .nav-list.link:focus {
     color: var(--button-color);
+    text-decoration-line: underline;
+    text-decoration-color: var(--button-color);
   }
-  
+  /* Address */
   .address {
     font-style: normal;
   }
-  
+  .adress.list {
+    list-style: none;
+    padding: 0;
+  }
   .address-contact {
     font-style: normal;
     font-weight: 400;
@@ -65,8 +71,8 @@
     color: var(--text-color);
     text-decoration: none;
   }
-  .address-contact:hover,
-  .address-contact:focus {
+  .address-contact.link:hover,
+  .address-contact.link:focus {
     color: var(--button-color);
   }
   
@@ -94,6 +100,11 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     cursor: pointer;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 16px 32px;
+    gap: 10px;
   }
   .hero-button:hover,
   .hero-button:focus {
@@ -163,7 +174,7 @@
   .footer {
     background: var(--basic-color);
   }
-  .studio-footer {
+  .webstudio-footer {
     font-family: "Raleway", sans-serif;
     font-weight: 800;
     font-size: 18px;
@@ -178,6 +189,16 @@
     color: var(--cloud-color);
   }
   /* Portfolio */
+  /* Hidden Title */
+  .hidden-title {
+    font-family: "Roboto", sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 56px;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: var(--title-text-color);
+  }
   
   /* Filter Buttons */
   .filters > ul {
@@ -220,3 +241,71 @@
     letter-spacing: 0.02em;
     color: var(--text-color);
   }
+ /* Blocks */
+ul,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+  padding: 0;
+}
+/* Header */
+.logo.link {
+  display: inline-block;
+}
+.logo.link.box {
+  margin-right: 76px;
+}
+.header {
+  border-bottom: 1px solid #e7e9fc;
+}
+.header.container {
+  display: flex;
+}
+.container {
+  width: 1158px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+.header-navigation {
+  display: flex;
+  align-items: center;
+}
+.header-list {
+  display: flex;
+  gap: 40px;
+}
+.header-item {
+  padding: 24px 0;
+}
+.nav-list.link {
+  padding: 24px 0;
+}
+.adress {
+  gap: 40px;
+  display: flex;
+}
+.adress-item {
+  padding: 24px 0;
+}
+/* Hero */
+.hero {
+  padding: 188px 0;
+}
+.hero-title {
+  max-width: 496px;
+  margin: 0 auto 48px;
+}
+.hero-button {
+  display: block;
+  min-width: 169px;
+  height: 56px;
+  border: none;
+  border-radius: 4px;
+  margin: auto;
+}
+/* Features */
