--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,9 @@
     letter-spacing: 0.02em;
     background: var(--white-color);
   }
+  .img {
+    display: block;
+  }
   /* Header */
   .webstudio.header {
     font-family: "Raleway", sans-serif;
@@ -26,7 +29,6 @@
     text-transform: uppercase;
     text-decoration: none;
   }
-  
   .studio {
     font-family: "Raleway", sans-serif;
     font-weight: 800;
@@ -62,6 +64,7 @@
   .adress.list {
     list-style: none;
     padding: 0;
+
   }
   .address-contact {
     font-style: normal;
@@ -289,6 +292,10 @@ p {
   gap: 40px;
   display: flex;
 }
+.adress.list {
+  display: flex; 
+  gap: 40px;
+}
 .adress-item {
   padding: 24px 0;
 }
@@ -367,6 +374,9 @@ p {
 }
 .footer-description {
   max-width: 264px;
+}
+.logo.link.footer {
+  margin-bottom: 72px;
 }
 /* Projects */
 .filters {
