--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@
     letter-spacing: 0.02em;
     background: var(--white-color);
   }
-  .img {
+  img {
     display: block;
   }
   /* Header */
@@ -358,7 +358,7 @@ p {
   flex-basis: calc((100% - 3 * 24px) / 4);
   border-radius: 0px 0px 4px 4px;
 }
-.teammate-container {
+.teammate-container.container {
   padding: 32px 16px;
 }
 .teammate-name {
