--- a/css/styles.css
+++ b/css/styles.css
@@ -347,6 +347,11 @@ p {
 .team {
   padding: 120px 0;
 }
+.team-container.container {
+  width: 1158px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
 .team-title {
   margin-bottom: 72px;
 }
