--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@
     display: block;
   }
   /* Header */
-  .webstudio.header {
+  .webstudio-header.logo {
     font-family: "Raleway", sans-serif;
     font-weight: 800;
     font-size: 18px;
@@ -269,7 +269,7 @@ p {
 }
 /* Header */
 
-.webstudio.header {
+.webstudio-header.logo {
   margin-right: 76px;
 }
 .header {
