--- a/css/styles.css
+++ b/css/styles.css
@@ -151,6 +151,7 @@
   }
   .team-title {
     font-weight: 700;
+    font-style: normal;
     font-size: 36px;
     line-height: 1.11;
     text-align: center;
@@ -163,6 +164,7 @@
   }
   .teammate-name {
     font-weight: 500;
+    font-style: normal;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
@@ -171,6 +173,7 @@
   .teammate-description {
     font-size: 16px;
     line-height: 1.5;
+    letter-spacing: 0.02em;
     color: var(--text-color);
   }
   /* Footer */
