--- a/css/styles.css
+++ b/css/styles.css
@@ -375,7 +375,7 @@ p {
   width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
 }
-.teammate-container.container {
+.teammate-container {
   padding: 32px 16px;
 }
 .teammate-name {
