--- a/css/styles.css
+++ b/css/styles.css
@@ -397,7 +397,7 @@ p {
 .logotype-footer {
   margin-bottom: 16px;
 }
-.webstudio.footer {
+.webstudio-footer {
   display: inline-block;}
 /* Projects */
 .filters {
