--- a/css/styles.css
+++ b/css/styles.css
@@ -428,7 +428,7 @@ p {
 .projects-item {
   width: calc((100% - 48px) / 3);
 }
-.project-card.container {
+.project-card-container {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
