--- a/css/styles.css
+++ b/css/styles.css
@@ -1,266 +1,265 @@
 :root {
-    --basic-color: #2e2f42;
-    --additional-color: #4d5ae5;
-    --white-color: #ffffff;
-    --text-color: #434455;
-    --cloud-color: #f4f4fd;
-    --button-color: #404bbf;
-    --accent-color: #e7e9fc;
-  }
-  
-  body {
-    font-family: "Roboto", sans-serif;
-    color: #434455;
-    letter-spacing: 0.02em;
-    background: var(--white-color);
-  }
-  img {
-    display: block;
-  }
-  /* Header */
-  .webstudio-header.logo {
-    font-family: "Raleway", sans-serif;
-    font-weight: 800;
-    font-size: 18px;
-    line-height: 1.17;
-    color: var(--additional-color);
-    letter-spacing: 0.03em;
-    align-items: center;
-    text-transform: uppercase;
-    text-decoration: none;
-  }
-  .studio {
-    font-family: "Raleway", sans-serif;
-    font-weight: 800;
-    font-size: 18px;
-    line-height: 1.2;
-    color: var(--basic-color);
-    align-items: center;
-    text-transform: uppercase;
-  }
-  .link {
-    text-decoration: none;
-  }
-  .list {
-    list-style-type: none;
-  }
-  /* Header Navigation */
-  .nav-list.link {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    color: var(--basic-color);
-  }
-  .nav-list.link:hover,
-  .nav-list.link:focus {
-    color: var(--button-color);
-    text-decoration-line: underline;
-    text-decoration-color: var(--button-color);
-  }
-  /* Address */
-  .address {
-    font-style: normal;
-    line-height: 1.5;
-  margin-left: auto;
-  }
-  .adress.list {
-    list-style: none;
-    padding: 0;
+  --basic-color: #2e2f42;
+  --additional-color: #4d5ae5;
+  --white-color: #ffffff;
+  --text-color: #434455;
+  --cloud-color: #f4f4fd;
+  --button-color: #404bbf;
+  --accent-color: #e7e9fc;
+}
 
-  }
-  .address-contact {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
-    color: var(--text-color);
-    text-decoration: none;
-  }
-  .address-contact.link:hover,
-  .address-contact.link:focus {
-    color: var(--button-color);
-  }
-  
-  /* Hero */
-  .hero {
-    background: var(--basic-color);
-    text-align: center;
-  }
-  .hero-title {
-    font-weight: 700;
-    font-size: 56px;
-    line-height: 1.07;
-    text-align: center;
-    letter-spacing: 0.02em;
-    color: var(--white-color);
-  }
-  .hero-button {
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    color: var(--white-color);
-    background: var(--additional-color);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    cursor: pointer;
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    padding: 16px 32px;
-    gap: 10px;
-  }
-  .hero-button:hover,
-  .hero-button:focus {
-    background-color: var(--button-color);
-  }
-  
-  /* Features */
-  .features > ul {
-    list-style-type: none;
-  }
-  .features-name {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: var(--basic-color);
-  }
-  .features-description {
-    font-size: 16px;
-    line-height: 1.5;
-    color: var(--text-color);
-  }
-  /* Examples */
-  .examples > ul {
-    list-style-type: none;
-  }
-  .examples-title {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.11;
-    text-align: center;
-    text-transform: capitalize;
-    color: var(--basic-color);
-  }
-  /* Team */
-  .team {
-    background: var(--cloud-color);
-  }
-  .team > ul {
-    list-style-type: none;
-  }
-  .team-title {
-    font-weight: 700;
-    font-style: normal;
-    font-size: 36px;
-    line-height: 1.11;
-    text-align: center;
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
-    color: var(--basic-color);
-  }
-  .teammate {
-    background-color: var(--white-color);
-  }
-  .teammate-name {
-    font-weight: 500;
-    font-style: normal;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: var(--basic-color);
-  }
-  .teammate-description {
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: var(--text-color);
-  }
-  /* Footer */
-  .footer {
-    background: var(--basic-color);
-  }
-  .webstudio-footer {
-    font-family: "Raleway", sans-serif;
-    font-weight: 800;
-    font-size: 18px;
-    line-height: 1.2;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: var(--cloud-color);
-  }
-  .footer-description {
-    font-size: 16px;
-    line-height: 1.5;
-    color: var(--cloud-color);
-  }
-  .logotype-footer {
-    font-family: "Raleway", sans-serif;
-    font-weight: 800;
-    font-size: 18px;
-    line-height: 1.17;
-    color: var(--additional-color);
-    letter-spacing: 0.03em;
-    align-items: center;
-    text-transform: uppercase;
-    text-decoration: none;
-  }
-  /* Portfolio */
-  /* Hidden Title */
-  .hidden-title {
-    font-family: "Roboto", sans-serif;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 56px;
-    text-align: center;
-    letter-spacing: 0.02em;
-    color: var(--title-text-color);
-  }
-  
-  /* Filter Buttons */
-  .filters > ul {
-    list-style-type: none;
-  }
-  .filters-button {
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    color: var(--additional-color);
-    background: var(--cloud-color);
-    border: 1px solid var(--accent-color);
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  .filters-button:hover,
-  .filters-button:focus {
-    background: var(--button-color);
-    color: var(--white-color);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
-      0px 2px 2px rgba(0, 0, 0, 0.12);
-    border-radius: 4px;
-  }
-  
-  /* Projects */
-  
-  .project-title {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: var(--basic-color);
-  }
-  .project-description {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: var(--text-color);
-  }
- /* Blocks */
+body {
+  font-family: "Roboto", sans-serif;
+  color: #434455;
+  letter-spacing: 0.02em;
+  background: var(--white-color);
+}
+img {
+  display: block;
+}
+/* Header */
+.webstudio-header.logo {
+  font-family: "Raleway", sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.17;
+  color: var(--additional-color);
+  letter-spacing: 0.03em;
+  align-items: center;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+.studio {
+  font-family: "Raleway", sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.2;
+  color: var(--basic-color);
+  align-items: center;
+  text-transform: uppercase;
+}
+.link {
+  text-decoration: none;
+}
+.list {
+  list-style-type: none;
+}
+/* Header Navigation */
+.nav-list.link {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  color: var(--basic-color);
+}
+.nav-list.link:hover,
+.nav-list.link:focus {
+  color: var(--button-color);
+  text-decoration-line: underline;
+  text-decoration-color: var(--button-color);
+}
+/* Address */
+.address {
+  font-style: normal;
+  line-height: 1.5;
+  margin-left: auto;
+}
+.adress.list {
+  list-style: none;
+  padding: 0;
+}
+.address-contact {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  color: var(--text-color);
+  text-decoration: none;
+}
+.address-contact.link:hover,
+.address-contact.link:focus {
+  color: var(--button-color);
+}
+
+/* Hero */
+.hero {
+  background: var(--basic-color);
+  text-align: center;
+}
+.hero-title {
+  font-weight: 700;
+  font-size: 56px;
+  line-height: 1.07;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: var(--white-color);
+}
+.hero-button {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: var(--white-color);
+  background: var(--additional-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 16px 32px;
+  gap: 10px;
+}
+.hero-button:hover,
+.hero-button:focus {
+  background-color: var(--button-color);
+}
+
+/* Features */
+.features > ul {
+  list-style-type: none;
+}
+.features-name {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--basic-color);
+}
+.features-description {
+  font-size: 16px;
+  line-height: 1.5;
+  color: var(--text-color);
+}
+/* Examples */
+.examples > ul {
+  list-style-type: none;
+}
+.examples-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  text-transform: capitalize;
+  color: var(--basic-color);
+}
+/* Team */
+.team {
+  background: var(--cloud-color);
+}
+.team > ul {
+  list-style-type: none;
+}
+.team-title {
+  font-weight: 700;
+  font-style: normal;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: var(--basic-color);
+}
+.teammate {
+  background-color: var(--white-color);
+}
+.teammate-name {
+  font-weight: 500;
+  font-style: normal;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--basic-color);
+}
+.teammate-description {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--text-color);
+}
+/* Footer */
+.footer {
+  background: var(--basic-color);
+}
+.webstudio-footer {
+  font-family: "Raleway", sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--cloud-color);
+}
+.footer-description {
+  font-size: 16px;
+  line-height: 1.5;
+  color: var(--cloud-color);
+}
+.logotype-footer {
+  font-family: "Raleway", sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.17;
+  color: var(--additional-color);
+  letter-spacing: 0.03em;
+  align-items: center;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+/* Portfolio */
+/* Hidden Title */
+.hidden-title {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 56px;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: var(--title-text-color);
+}
+
+/* Filter Buttons */
+.filters > ul {
+  list-style-type: none;
+}
+.filters-button {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: var(--additional-color);
+  background: var(--cloud-color);
+  border: 1px solid var(--accent-color);
+  border-radius: 4px;
+  cursor: pointer;
+}
+.filters-button:hover,
+.filters-button:focus {
+  background: var(--button-color);
+  color: var(--white-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+}
+
+/* Projects */
+
+.project-title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--basic-color);
+}
+.project-description {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--text-color);
+}
+/* Blocks */
 ul,
 h1,
 h2,
@@ -307,7 +306,7 @@ p {
   display: flex;
 }
 .address-list.list {
-  display: flex; 
+  display: flex;
   gap: 40px;
 }
 .address-item {
@@ -398,7 +397,11 @@ p {
   margin-bottom: 16px;
 }
 .webstudio-footer {
-  display: inline-block;}
+  display: inline-block;
+}
+.footer-container {
+  display: flex;
+}
 /* Projects */
 .filters {
   padding: 96px 0 120px;
@@ -416,14 +419,16 @@ p {
   border-radius: 4px;
 }
 .filter-button:hover,
-.filter-button:focus {border: 1px solid transparent;}
+.filter-button:focus {
+  border: 1px solid transparent;
+}
 
-.projects-list.list {  outline: tomato;
+.projects-list.list {
+  outline: tomato;
   display: flex;
   flex-wrap: wrap;
   column-gap: 24px;
   row-gap: 48px;
-
 }
 .projects-item {
   width: calc((100% - 48px) / 3);
