--- a/css/styles.css
+++ b/css/styles.css
@@ -123,7 +123,7 @@ img {
   margin: -1px;
   border: 0;
   padding: 0;
-  
+
   white-space: nowrap;
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
@@ -293,7 +293,7 @@ p {
 .header {
   border-bottom: 1px solid #e7e9fc;
 }
-.header-container.container {
+.header-container {
   display: flex;
 }
 .container {
@@ -309,9 +309,7 @@ p {
   display: flex;
   gap: 40px;
 }
-.header-item {
-  padding: 24px 0;
-}
+
 .nav-list.link {
   padding: 24px 0;
 }
@@ -410,18 +408,18 @@ p {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #F4F4FD;
+  color: #f4f4fd;
 }
 .logotype-footer {
   margin-bottom: 16px;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 1.17;
   align-items: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #4D5AE5;
+  color: #4d5ae5;
   display: inline-block;
 }
 .webstudio-footer {
@@ -442,13 +440,29 @@ p {
   margin-bottom: 72px;
 }
 .filter-button {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.04em;
   padding: 12px 24px;
   border: 1px solid #e7e9fc;
   border-radius: 4px;
+  background: #F4F4FD;
+  color:#4d5ae5;
+  cursor: pointer;
 }
+
+
 .filter-button:hover,
 .filter-button:focus {
   border: 1px solid transparent;
+  color: #ffffff;
+  background-color: #404bbf;
 }
 
 .projects-list.list {
