--- a/css/styles.css
+++ b/css/styles.css
@@ -408,6 +408,7 @@ p {
   color: #f4f4fd;
 }
 .logotype-footer {
+  display: inline-block;
   margin-bottom: 16px;
   font-family: "Raleway", sans-serif;
   font-weight: 800;
