--- a/css/styles.css
+++ b/css/styles.css
@@ -145,8 +145,9 @@ p {
 .header {
   border-bottom: 1px solid #e7e9fc;
 }
-.header-container {
+.header .container {
   display: flex;
+  justify-content: space-between;
 }
 .container {
   width: 1158px;
